Change Log for OpenXava project
===============================

- Fix: Misleading message "Trying to load controller twice". 
- Fix: Apostrophe used in labels files is not shown in tooltips. 
- Fix: Several except-for-tab in tabs-default-values fails.
- Fix: Calling getView().getEntity() when there is an element collection in the view fails. 
- Fix: helpPrefix from xava.properties does not work for external URLs.
- Fix: It is possible to add programmatically the same action several times. 
- Fix: View.getEntity() fails when there is an empty reference in the UI. 
- Entity from View has nulls for non-existing references, before they were empty objects.
- Fix: Dialog is not shown from an @OnChange action. 
- Methods showDialog(), closeDialog(), showNewView() and returnToPreviousView() available from OnChangePropertyBaseAction.
- Fix: Dangerous JavaScript content possible in list mode by a XSS attack.
- Fix: An IForwardAction from an IChainAction with on-init=true does not do the forward. 
- Fix: Collection customization is not stored permanently if @ListProperties is used. 
- Fix: DWR signature warning in log.
- Fix: View.getEntity() when creating does not load the references so combo descriptions are not available.
- Fix: FILES stereotype fails from embedded reference.
- Fix: XSS protection does not include iframe and window.location.
- Fix: Error "i.contentWindow is null" on closing a dialog with HTML_TEXT stereotype.
- Fix: Frames for groups with blanks in their name do not open and close. 
- Fix: Section and group names with blanks produces some misbehavior.
- New removeBlanks() method in Strings utility class.
- Fix: A reference to parent cannot be changed in a composite structure.

OpenXava 5.2 (2015-1-26)
------------------------
- Moving columns in list with drag and drop.
- Removing a column from a list is done instantly and with a fade effect.
- The list for adding columns to a list is shown inside a dialog.